Fix colour in app

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         {% if led_states[0] == False%}
         <button type="submit" class="btn btn-primary mt-4">Turn Outside Light ON</button>
         {%else%}
-        <button type="submit" class="btn btn-primary mt-4" style="background-color: red;">Turn Outside Light OFF</button>
+        <button type="submit" class="btn btn-primary mt-4" style="background-color: green;">Turn Outside Light OFF</button>
         {%endif%}
       </form>
 
@@ -73,7 +73,7 @@
         {% if led_states[1] == False%}
         <button type="submit" class="btn btn-primary mt-4">Turn Inside Light ON</button>
         {%else%}
-        <button type="submit" class="btn btn-primary mt-4" style="background-color: red;">Turn Inside Light OFF
+        <button type="submit" class="btn btn-primary mt-4" style="background-color:green">Turn Inside Light OFF
 
         </button>
         {%endif%}
@@ -83,7 +83,7 @@
         {%if led_states[2] == False%}
         <button type="submit" class="btn btn-primary mt-4">Turn AC ON</button>
         {%else%}
-        <button type="submit" class="btn btn-primary mt-4" style="background-color: red;">Turn AC OFF</button>
+        <button type="submit" class="btn btn-primary mt-4" style="background-color: green">Turn AC OFF</button>
         {%endif%}
       </form>
     </div>
